syntax = "proto3";   // 声明使用 proto3 语法。如果不声明，将默认使用 proto2 语法
package api; // 指明当前包

// 代表生成的go代码存放的目录是api，包名称是api
option go_package = "./api;api";

// 初始化模块
service InitService {
  rpc Init (NoParam) returns (BoolReply) {}// 初始化
}

// 不需要参数的调用
message NoParam { 
}

message BoolReply {
  int32 code = 1;
  bool result = 2;
  string message = 3;
}